--- a/AOC22/AOC22.csproj
+++ b/AOC22/AOC22.csproj
@@ -11,6 +11,8 @@
         <EmbeddedResource Include="Inputs/day1.txt" />
         <EmbeddedResource Include="Inputs/day2.txt" />
         <EmbeddedResource Include="Inputs/day3.txt" />
+        <EmbeddedResource Include="Inputs/day4.txt" />
+        <EmbeddedResource Include="Inputs/day5.txt" />
     </ItemGroup>
 
 </Project>
