--- a/AOC22/AOC22.csproj
+++ b/AOC22/AOC22.csproj
@@ -13,6 +13,7 @@
         <EmbeddedResource Include="Inputs/day3.txt" />
         <EmbeddedResource Include="Inputs/day4.txt" />
         <EmbeddedResource Include="Inputs/day5.txt" />
+        <EmbeddedResource Include="Inputs/day6.txt" />
     </ItemGroup>
 
 </Project>
