--- a/AOC22/AOC22.csproj
+++ b/AOC22/AOC22.csproj
@@ -14,6 +14,7 @@
         <EmbeddedResource Include="Inputs/day4.txt" />
         <EmbeddedResource Include="Inputs/day5.txt" />
         <EmbeddedResource Include="Inputs/day6.txt" />
+        <EmbeddedResource Include="Inputs/day7.txt" />
     </ItemGroup>
 
 </Project>
