--- a/AOC22/AOC22.csproj
+++ b/AOC22/AOC22.csproj
@@ -15,6 +15,8 @@
         <EmbeddedResource Include="Inputs/day5.txt" />
         <EmbeddedResource Include="Inputs/day6.txt" />
         <EmbeddedResource Include="Inputs/day7.txt" />
+        <EmbeddedResource Include="Inputs/day8.txt" />
+        <EmbeddedResource Include="Inputs/day9.txt" />
     </ItemGroup>
 
 </Project>
